--- a/shop/templates/shop/_layout.html
+++ b/shop/templates/shop/_layout.html
@@ -195,7 +195,7 @@
             </a>
             <a href="#" class="flex items-center space-x-2 hover:text-green-600">
                 <i class="fas fa-store w-5 text-center"></i>
-                <span>Магазини Tingo</span>
+                <span>Магазини \Tingo</span>
             </a>
         </nav>
 
